[package]
authors = ["mcarton <cartonmartin+git@gmail.com>"]
description = "A rustc plugin to check for numerical instability"
keywords = ["float", "herbie", "lint", "math", "plugin"]
license = "MPL-2.0"
name = "herbie-lint"
readme = "README.md"
repository = "https://github.com/mcarton/rust-herbie-lint"
version = "1.0.1"

[lib]
name = "herbie_lint"
plugin = true

[dependencies]
clippy = {version = "~0.0", optional = true}
compiletest_rs = "0.0.11"
itertools = "0.4.5"
rusqlite = "0.6.0"
rustc-serialize = "0.3.16"
toml = "0.1.25"

[features]
default=[]
