[package]
authors = ["mcarton <cartonmartin+git@gmail.com>"]
description = "A rustc plugin to check for numerical instability"
keywords = ["float", "herbie", "lint", "math", "plugin"]
license = "MPL-2.0"
name = "herbie-lint"
readme = "README.md"
repository = "https://github.com/mcarton/rust-herbie-lint"
version = "1.0.4"

[lib]
name = "herbie_lint"
plugin = true

[dependencies]
clippy = {version = "~0.0", optional = true}
itertools = "0.4.7"
rusqlite = "0.6.0"
rustc-serialize = "0.3.16"
toml = "0.1.25"
wait-timeout = "0.1.0"

[dev-dependencies]
compiletest_rs = "0.0.11"

[features]
default=[]
